# Todo-App

./: .gitignore  AGENTS.md  DEPLOYMENT.md  IMPLEMENTATION_COMPLETE.md  PULL_REQUEST.md  README.md  TEST_REPORT.md
.spec-kit/memory/: constitution.md
.specify/memory/: constitution.md
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 9be9a24d5c77_create_users_and_todos_tables.py  f01b344a5fdb_add_full_name_to_users.py
backend/src/: __init__.py  main.py
backend/src/api/: auth.py  deps.py  todos.py
backend/src/core/: config.py  database.py  errors.py  security.py
backend/src/models/: todo.py  user.py
backend/src/services/: auth_service.py  todo_service.py
frontend/: .env.local.example  package-lock.json  package.json  vercel.json
frontend/src/app/: error.tsx  layout.tsx
history/docs/: DEPLOYMENT.md
phases/phase1-console/: README.md  requirements.txt
phases/phase2-web/: README.md  docker-compose.yml
phases/phase3-chatbot/: README.md
phases/phase4-k8s/: README.md
phases/phase5-cloud/: README.md
specs/001-phase-i-console/: plan.md  quickstart.md  research.md  tasks.md
specs/002-phase-ii-persistence/: data-model.md  quickstart.md
specs/003-phase-iii-ai-chat/: plan.md  research.md  spec.md  tasks.md
specs/phase1-console/: data-model.md  spec.md
specs/phase2-web/: plan.md  research.md  spec.md  tasks.md
specs/phase3-chatbot/: spec.md
specs/phase4-k8s/: spec.md
specs/phase5-cloud/: spec.md
src/: todo_app.py
(+43 files in other folders)
